--- a/Buoi08/CollectionViewDemo01/Podfile
+++ b/Buoi08/CollectionViewDemo01/Podfile
@@ -4,6 +4,8 @@ target 'CollectionViewDemo01' do
   # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
   use_frameworks!
 
-  pod 'SVProgressHUD'
+  pod 'SVProgressHUD', '2.2.5'
+  pod 'SwiftyGif', '4.2.0'
+  pod 'Kingfisher', '4.10.1'
 
 end
